@@ -4,9 +4,9 @@
   rbgtkentry.c -
 
   $Author: mutoh $
-  $Date: 2003/02/01 16:46:23 $
+  $Date: 2004/05/24 16:18:58 $
 
-  Copyright (C) 2002,2003 Ruby-GNOME2 Project Team
+  Copyright (C) 2002-2004 Ruby-GNOME2 Project Team
   Copyright (C) 1998-2000 Yukihiro Matsumoto,
                           Daisuke Kanda,
                           Hiroshi Igarashi
@@ -40,6 +40,23 @@ entry_get_layout_offsets(self)
     return rb_ary_new3(2, INT2NUM(x), INT2NUM(y));
 }
 
+#if GTK_CHECK_VERSION(2,4,0)
+static VALUE
+entry_set_completion(self, completion)
+    VALUE self, completion;
+{
+    gtk_entry_set_completion(_SELF(self), GTK_ENTRY_COMPLETION(RVAL2GOBJ(completion)));
+    return self;
+}
+
+static VALUE
+entry_get_completion(self)
+    VALUE self;
+{
+    return GOBJ2RVAL(gtk_entry_get_completion(_SELF(self)));
+}
+#endif
+
 void 
 Init_gtk_entry()
 {
@@ -48,4 +65,8 @@ Init_gtk_entry()
     rb_define_method(gEntry, "initialize", entry_initialize, 0);
     rb_define_method(gEntry, "layout", entry_get_layout, 0);
     rb_define_method(gEntry, "layout_offsets", entry_get_layout_offsets, 0);
+    rb_define_method(gEntry, "set_completion", entry_set_completion, 1);
+    rb_define_method(gEntry, "completion", entry_get_completion, 0);
+
+    G_DEF_SETTERS(gEntry);
 }
